# sea_battle

./: .gitignore  CMakeLists.txt  LICENSE  Menu.h  README.md  auto_import.h  loader.database.binary  main.c  menu.h
better_debug/: better_debug.c  better_debug.h
database/: loader.database.binary  users.database.binary
game_save/game_log/: game_log_define.h
game_save/load/: load_game.c  load_game.h
game_save/save/: save_game.c  save_game.h
map/: map.h
map/point_declare/: point_declare.c  point_declare.h
map/point_helper/: point_helper.c  point_helper.h
map/visual/: map_visual.c  map_visual.h
menu/: Menu.c  Menu.h  menu.c  menu.h
menu/helpers/: MenuHelpers.c  MenuHelpers.h  menu_helpers.c  menu_helpers.h
menu/in-game/: in_game_menu.c  in_game_menu.h
menu/main/: MainMenu.c  MainMenu.h  main_menu.c  main_menu.h
menu/settingsMenu/: settingsMenu.c  settingsMenu.h  settings_menu.c  settings_menu.h
menu/user/: user.c  user.h  user_menu.c  user_menu.h
modes/: modes.h
modes/multiplayer/: multiplayer.c  multiplayer.h
modes/singleplayer/: singleplayer.c  singleplayer.h
players/: player.h
players/define/: player_define.c  player_define.h
players/load/: load_player.c  load_player.h
scoreboard/show/: show_scoreboard.c  show_scoreboard.h
settings/: settings.c  settings.h
ship/: ship.h
ship/define/: ship_define.c  ship_define.h
ship/placement/auto/: ship_placement_auto.c  ship_placement_auto.h
ship/placement/manual/: ship_placement_manual.c  ship_placement_manual.h
users/: user.h  users.h
users/define/: user_define.c  user_define.h
users/load_user/: load_user.c  load_user.h
